# emagick.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  emagick_rs.erl  rebar.config
src/: bindings.rs  emagick_rs.app.src  emagick_rs.erl  lib.rs
test/: emagick_rs_SUITE.erl
