[package]
name = "emagick-rs"
version = "0.5.0"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Erlang interface to ImageMagick via Rust."
homepage = "https://github.com/nlfiedler/emagick.rs"
repository = "https://github.com/nlfiedler/emagick.rs.git"
readme = "README.md"
keywords = ["imagemagick", "erlang"]
license = "Apache-2.0"

[lib]
name = "emagick_rs"
crate-type = ["cdylib"]

[dependencies]
libc = ">=0.2"
magick_rust = "0.7.0"
erlang_nif-sys = "0.6.2"
